Added slightly modified template from djangogirl tutorial

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,22 @@
 <html>
     <head>
-        <title>Jon's blog</title>
+        <title>Jon</title>
     </head>
     <body>
-        <p>Hello World</p>
-        <p>Big Hugs</p>
+        <div>
+            <h1><a href="/">Django Girls Blog</a></h1>
+        </div>
+
+        <div>
+            <p>Published: 28.08.2020, 02:46</p>
+            <h2><a href="">My first post</a></h2>
+            <p>Hello World.</p>
+        </div>
+
+        <div>
+            <p>Published: 28.08.2020, 02:47</p>
+            <h2><a href="">My second post</a></h2>
+            <p>Big hugs.</p>
+        </div>
     </body>
 </html>
