--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,19 +4,14 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">Django Girls Blog</a></h1>
+            <h1><a href="/">Jon's Blog</a></h1>
         </div>
-
-        <div>
-            <p>Published: 28.08.2020, 02:46</p>
-            <h2><a href="">My first post</a></h2>
-            <p>Hello World.</p>
-        </div>
-
-        <div>
-            <p>Published: 28.08.2020, 02:47</p>
-            <h2><a href="">My second post</a></h2>
-            <p>Big hugs.</p>
-        </div>
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
     </body>
 </html>
