--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,26 +1,104 @@
+html * {
+    font-family: 'liberation_sans_webfont';
+}
+
+body{
+  color: #222222;
+  background-color: #ffffff;
+}
+
+.body-dark{
+  color: #eeeeee;
+  background-color: #121212;
+}
+
+.link {
+    color:#222222;
+}
+
+.link-dark{
+    color:#eeeeee !important;
+}
+
+.theme-switcher {
+    display: inline-block;
+    *display: inline;
+    position:absolute;
+    right: 10px;
+    padding-top: 7px;
+}
+
+#btn-theme-switcher, .btn-theme-switcher-dark {
+    width: 80px;
+    height: 80px;
+    border: none;
+}
+
+#btn-theme-switcher {
+    background-color:#808080;
+}
+
+#btn-theme-switcher::before {
+    font-family: fontAwesome;
+    content: "\f186";
+    font-size: 36pt;
+}
+
+.btn-theme-switcher-dark::before {
+    font-family: fontAwesome;
+    content: "\f185" !important;
+    font-size: 36pt;
+}
+
+.post {
+    margin-bottom: 20px;
+    margin-left: 10px;
+    height:100px;
+    min-width:40px;
+}
+
+.post h2 a, .post h2 a:visited {
+    color: #222222;
+}
+
+.post-dark h2 a, .post-dark h2 a:visited {
+    color: #eeeeee !important;
+}
+
+/*Everything below shouldn't need to change with dark-theme*/
 .page-header {
-    background-color: #006408;
     margin-top: 0;
     padding: 5px 20px 20px 20px;
 }
 
-.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+.page-header {
+    background-color: #276F02;
+}
+
+.title {
+    display: inline-block;
+    *display: inline;
+}
+
+.title h1, .title h1 a, .title h1 a:visited, .title h1 a:active {
     color: #ffffff;
     font-size: 36pt;
     font_weight: bold;
     text-decoration: none;
 }
 
-.content {
-    margin-left: 20px;
+.page-container {
+  position: relative;
+  min-height: 100%;
 }
 
-h1, h2, h3, h4 {
-    font-family: 'liberation_sans_webfont';
+.content-container {
+    padding-bottom: 2.5rem;
 }
 
 .date {
     color: #828282;
+    margin-bottom:-15px;
 }
 
 .save {
@@ -31,23 +109,41 @@ h1, h2, h3, h4 {
     width: 100%;
 }
 
-.top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
-    float: right;
-    font-size: 26pt;
-    margin-right: 20px;
-}
-
-.post {
-    margin-bottom: 30px;
-}
-
-.post h2 a, .post h2 a:visited {
-    color: #000000;
-}
-
 .footer {
-    padding: 0px 20px ;
+  position: fixed;
+  bottom: 0;
+  width: 100&;
+  height: 2.5rem;
+  text-align: justify;
+  -ms-text-justify: distribute-all-lines;
+  text-justify: distribute-all-lines;
+  min-width: 100%;
+  padding-left: 10px;
+  padding-right: 20px;
+}
+
+.footer-item, .footer-item-dark {    
+    font-size: 10pt;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+}
+
+.footer-item{
+    color: #828282;
+}
+
+.footer-item-dark {
+    color: #eeeeee;
+}
+
+.distribute {
+    width: 100%;
+    display: inline-block;
+    *display: inline;
+    font-size: 0;
+    line-height: 0;
+    bottom: 0;
 }
 
 @font-face {
