--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,9 @@
     <body>
         <div class="page-container">
             <div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                {% endif %}
                 <div class="title">
                     <h1><a class="link" href="/"> The Bridging Coursework Blog </a></h1>
                 </div>
