--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     </head>
     <body>
         <div class="page-container">
             <div class="page-header">
                 {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_new' %}" class="top-menu"><span id="new-plus" class="glyphicon glyphicon-plus"></span></a>
                 {% endif %}
                 <div class="title">
                     <h1><a class="link" href="/"> The Bridging Coursework Blog </a></h1>
@@ -30,27 +31,29 @@
             </div>
             <footer class="footer">
                 <div class="footer-item">                   
-                    <a class=link href="https://www.fontsquirrel.com/license/liberation-sans">Using Liberations Sans font</a>
+                    Using <a class=link href="https://www.fontsquirrel.com/license/liberation-sans">Liberations Sans</a> font
                 </div>
                 <div class="footer-item">
-                    <a class=link href="https://www.djangoproject.com/">Built with Django</a>
+                    Built with <a class=link href="https://www.djangoproject.com/">Django</a>
                 </div>
                 <div class="footer-item">
                     <a class=link href="https://github.com/JDingDong8/Year2BridgingCoursework">Github Repo</a>
                 </div>
                 <div class="footer-item">
-                    <a class=link href="https://www.pythonanywhere.com">Hosted on PythonAnywhere</a>
+                    Hosted on <a class=link href="https://www.pythonanywhere.com">PythonAnywhere</a>
                 </div>
                 <div class="footer-item">
-                    <a class=link href="https://fontawesome.com/">Using icons from FontAwesome</a>
+                    Using icons from <a class=link href="https://fontawesome.com/">FontAwesome</a> and <a class=link href="https://glyphicons.com/"> BootStrap Glyphicons</a>
                 </div>
                 <span class="distribute"></span>
             </footer>
         </div>
+        <!--getElementsByClassName returns a list of elements, whereas .classList.toggle() operates on a single element -->
         <script>
              function toggleTheme() {
                 document.body.classList.toggle("body-dark");
                 document.getElementById("btn-theme-switcher").classList.toggle("btn-theme-switcher-dark");
+                document.getElementById("edit-pencil").classList.toggle("edit-pencil-dark");
                 var links = document.getElementsByClassName("link");
                 for(var i=0; i < links.length; i++) {
                     links[i].classList.toggle("link-dark");
@@ -58,6 +61,10 @@
                 var posts = document.getElementsByClassName("post")
                 for(var i=0; i < posts.length; i++) {
                     posts[i].classList.toggle("post-dark");
+                }
+                var footers = document.getElementsByClassName("footer-item")
+                for(var i=0; i< footers.length; i++) {
+                    footers[i].classList.toggle("footer-item-dark");
                 }
             }
         </script>
