--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -53,7 +53,11 @@
              function toggleTheme() {
                 document.body.classList.toggle("body-dark");
                 document.getElementById("btn-theme-switcher").classList.toggle("btn-theme-switcher-dark");
-                document.getElementById("edit-pencil").classList.toggle("edit-pencil-dark");
+                try {
+                    document.getElementById("edit-pencil").classList.toggle("edit-pencil-dark");
+                }
+                catch(err) {
+                }
                 var links = document.getElementsByClassName("link");
                 for(var i=0; i < links.length; i++) {
                     links[i].classList.toggle("link-dark");
