--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -155,7 +155,7 @@ body{
   text-justify: distribute-all-lines;
   min-width: 100%;
   margin-left: 0.5vw;
-  margin-right: 0.5vw;
+  padding-right: 1vw;
 }
 
 .distribute {
