--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -5,19 +5,20 @@ html * {
 body{
   color: #222222;
   background-color: #ffffff;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 .body-dark{
   color: #eeeeee;
+  opacity: .75;
+  transition: color .5s ease-in-out;
   background-color: #121212;
 }
 
 .link {
-    color:#222222;
-}
-
-.link-dark{
-    color:#eeeeee;
+    color: rgba(130, 130, 130, 0.75);
 }
 
 .theme-switcher {
@@ -25,12 +26,12 @@ body{
     *display: inline;
     position: absolute;
     right: 0.5vw;
-    margin-top: 0vw;
+    margin-top: 0vh;
 }
 
 #btn-theme-switcher{
     width: 4vw;
-    height: 4vw;
+    height: 4vh;
     border: none;
     background:none;
 }
@@ -48,7 +49,7 @@ body{
 }
 
 .post {
-    margin-bottom: 1.5vw;
+    margin-bottom: 3vh;
     margin-left: -19vw;
 }
 
@@ -64,23 +65,14 @@ body{
     font-size: 0.7vw;
     display: inline-block;
     *display: inline;
-    zoom: 1;
-}
-
-.footer-item{
-    color: #222222;
-}
-
-.footer-item-dark {
-    color: #eeeeee !important;
 }
 
 #edit-pencil{
     position:fixed;
-    top:7vw;
+    top:7vh;
     right:0.5vw;
     width:3.5vw;
-    height:3.5vw;
+    height:3.5vh;
     font-size:2.5vw;
     background:none;
     color:black;
@@ -91,18 +83,18 @@ body{
 }
 
 /*Everything below shouldn't need to change with dark-theme*/
+
 .page-header {
     background-color: #276F02;
-    margin-top: 0vw;
-    margin : 0vw 0vw 1vw 0vw;
+    margin : 0vh 0vw 1vh 0vw;
 }
 
 #new-plus {
     color:white;
     width:2vw;
-    height:3vw;
+    height:3vh;
     font-size:2.5vw;
-    margin: 0vw 1vw 0vw 0.5vw;
+    margin: 0vh 0vw 0vh 0.5vw;
 }
 
 .btn-default:hover {
@@ -117,24 +109,24 @@ body{
 .title h1, .title h1 a, .title h1 a:visited, .title h1 a:active {
     color: #ffffff;
     font-size: 2.5vw;
-    font_weight: bold;
+    font-weight: bold;
     text-decoration: none;
-    margin-left:0.5vw;
+    margin-left: 0.5vw;
 }
 
-.page-container {
+.page-container {  
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .content-container {
-    margin-bottom: 2.5rem;
+    padding-bottom: 2.5rem;
 }
 
 .date {
     color: #828282;
-    margin-bottom:-0.75vw;
-    margin-left:0.1vw;
+    margin-bottom:-0.75vh;
+    margin-left:-0.1vw;
 }
 
 .save {
@@ -142,24 +134,29 @@ body{
 }
 
 .post-form textarea, .post-form input {
-    width: 100%;
+    width: 100vw;
 }
 
-.footer {
-  position: fixed;
+.footer {  
   bottom: 0;
-  width: 100&;
+  width: 100%;
   height: 2.5rem;
   text-align: justify;
-  -ms-text-justify: distribute-all-lines;
   text-justify: distribute-all-lines;
-  min-width: 100%;
-  margin-left: 0.5vw;
-  padding-right: 1vw;
+  vertical-align: bottom;
+  min-width: 100vw;
+  margin-top: auto;
+  padding-right: 1.5vw;
+  margin-bottom: 0;
+  padding-left: 0.5vw;
+}
+
+.footer-item{
+    color: rgba(130, 130, 130, 0.5);
 }
 
 .distribute {
-    width: 100%;
+    width: 100vw;
     display: inline-block;
     *display: inline;
     font-size: 0;
