--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -3,18 +3,19 @@ html * {
 }
 
 body{
-  color: #222222;
-  background-color: #ffffff;
-  margin: 0;
-  padding: 0;
-  height: 100%;
+    color: #222222;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    position: relative;
 }
 
 .body-dark{
-  color: #eeeeee;
-  opacity: .75;
-  transition: color .5s ease-in-out;
-  background-color: #121212;
+    color: #eeeeee;
+    opacity: .75;
+    transition: color .5s ease-in-out;
+    background-color: #121212;
 }
 
 .link {
@@ -69,13 +70,14 @@ body{
 
 #edit-pencil{
     position:fixed;
-    top:7vh;
-    right:0.5vw;
-    width:3.5vw;
-    height:3.5vh;
-    font-size:2.5vw;
-    background:none;
-    color:black;
+    top: 12.4vh;
+    right: 0.5vw;
+    width: 3.5vw;
+    height: 6.22vh;
+    font-size: 2.5vw;
+    background: none;
+    color: black;
+    transition: color .5s ease-in-out;
 }
 
 .edit-pencil-dark {
@@ -115,12 +117,13 @@ body{
 }
 
 .page-container {  
-  position: relative;
-  min-height: 100vh;
+    min-height: 100%;
+    position: relative;
 }
 
 .content-container {
-    padding-bottom: 2.5rem;
+    position: relative;
+    margin-bottom: 1em;
 }
 
 .date {
@@ -131,32 +134,33 @@ body{
 
 .save {
     float: right;
+    margin-bottom: 2em;
 }
 
 .post-form textarea, .post-form input {
-    width: 100vw;
+    width: 100%;
+    color: #222222;
 }
 
 .footer {  
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-  text-align: justify;
-  text-justify: distribute-all-lines;
-  vertical-align: bottom;
-  min-width: 100vw;
-  margin-top: auto;
-  padding-right: 1.5vw;
-  margin-bottom: 0;
-  padding-left: 0.5vw;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 0em;
+    text-align: justify;
+    text-justify: distribute-all-lines;
+    min-width: 100%;
+    margin-top: auto;
+    padding-right: 1.5vw;
+    padding-left: 0.5vw; 
 }
 
-.footer-item{
+.footer-item {
     color: rgba(130, 130, 130, 0.5);
 }
 
 .distribute {
-    width: 100vw;
+    width: 100%;
     display: inline-block;
     *display: inline;
     font-size: 0;
